--- a/SO_egypt_freelancing.ipynb
+++ b/SO_egypt_freelancing.ipynb
@@ -187,8 +187,15 @@
         }
       ],
       "source": [
-        "egy_2019['Employment'].value_counts().plot(kind='pie', figsize=(5,5), autopct='%1.2f%%').set_ylabel('');\n",
-        "plt.title(\"Employment styles in Egypt during 2019\");"
+        "\n",
+        "\"\"\"\n",
+        "    Plot a pie chart for the specified series with the specified title and figure size\n",
+        "\"\"\"\n",
+        "def plot_pie(data, title, size):\n",
+        "    data.plot(kind='pie', figsize=size, autopct='%1.2f%%').set_ylabel('');\n",
+        "    plt.title(title);\n",
+        "\n",
+        "plot_pie(egy_2019['Employment'].value_counts(), \"Employment styles in Egypt during 2019\", (5,5));"
       ]
     },
     {
@@ -236,8 +243,9 @@
         }
       ],
       "source": [
-        "egy_2019[egy_2019['Student'] == 'Yes, full-time']['Employment'].value_counts().plot(kind='pie', figsize=(5,5), autopct='%1.2f%%').set_ylabel('');\n",
-        "plt.title(\"Employment styles for working full-time students in Egypt 2019\");"
+        "plot_pie(data=egy_2019[egy_2019['Student'] == 'Yes, full-time']['Employment'].value_counts(), \n",
+        "    title=\"Employment styles for working full-time students in Egypt 2019\", \n",
+        "    size=(5,5));"
       ]
     },
     {
@@ -275,8 +283,9 @@
       "source": [
         "egy_2019_tmp = egy_2019.copy()\n",
         "egy_2019_tmp.loc[egy_2019_tmp['Student'] == 'Yes, full-time', 'Employment'] = 'Student'\n",
-        "egy_2019_tmp['Employment'].value_counts().plot(kind='pie', figsize=(5,5), autopct='%1.2f%%').set_ylabel('');\n",
-        "plt.title(\"Employment styles in Egypt during 2019 after adding a 'Student' category\");"
+        "plot_pie(egy_2019_tmp['Employment'].value_counts(), \n",
+        "    title=\"Employment styles in Egypt during 2019 after adding a 'Student' category\", \n",
+        "    size=(5,5));"
       ]
     },
     {
@@ -312,8 +321,7 @@
         }
       ],
       "source": [
-        "egy_2020['Employment'].value_counts().plot(kind='pie', figsize=(7,7), autopct='%1.2f%%').set_ylabel('');\n",
-        "plt.title(\"Employment styles in Egypt during 2020\");"
+        "plot_pie(egy_2020['Employment'].value_counts(), \"Employment styles in Egypt during 2020\", (7,7));"
       ]
     },
     {
@@ -382,8 +390,7 @@
         }
       ],
       "source": [
-        "egy_2021['Employment'].value_counts().plot(kind='pie', figsize=(7,7), autopct='%1.2f%%').set_ylabel('');\n",
-        "plt.title(\"Employment styles in 2021\");"
+        "plot_pie(egy_2021['Employment'].value_counts(), \"Employment styles in 2021\", (7,7));"
       ]
     },
     {
@@ -422,8 +429,7 @@
       ],
       "source": [
         "egy_2020_counts = egy_2020[egy_2020['Employment'] != 'Student']['Employment'].value_counts().rename('2020');\n",
-        "egy_2020_counts.plot(kind='pie', figsize=(7,7), autopct='%1.2f%%').set_ylabel('');\n",
-        "plt.title(\"Employment styles for professionals developers in Egypt during 2020\");"
+        "plot_pie(egy_2020_counts, \"Employment styles for professionals developers in Egypt during 2020\", (7,7));"
       ]
     },
     {
@@ -451,8 +457,7 @@
       ],
       "source": [
         "egy_2021_counts = egy_2021[egy_2021['Employment'] != 'Student']['Employment'].value_counts().rename('2021');\n",
-        "egy_2021_counts.plot(kind='pie', figsize=(7,7), autopct='%1.2f%%').set_ylabel('');\n",
-        "plt.title(\"Employment styles for professionals developers in Egypt during 2021\");"
+        "plot_pie(egy_2021_counts, \"Employment styles for professionals developers in Egypt during 2021\", (7,7));"
       ]
     },
     {
@@ -550,8 +555,8 @@
         }
       ],
       "source": [
-        "df_2020[df_2020['Employment'] != 'Student']['Employment'].value_counts().plot(kind='pie', figsize=(7,7), autopct='%1.2f%%').set_ylabel('');\n",
-        "plt.title(\"Employment styles of SW developers worldwide in 2020\");"
+        "plot_pie(df_2020[df_2020['Employment'] != 'Student']['Employment'].value_counts(),\n",
+        "    title=\"Employment styles of SW developers worldwide in 2020\", size=(7,7));"
       ]
     },
     {
@@ -578,8 +583,8 @@
         }
       ],
       "source": [
-        "df_2021[df_2021['Employment'] != 'Student']['Employment'].value_counts().plot(kind='pie', figsize=(7,7), autopct='%1.2f%%').set_ylabel('');\n",
-        "plt.title(\"Employment styles of SW developers worldwide in 2021\");"
+        "plot_pie(df_2021[df_2021['Employment'] != 'Student']['Employment'].value_counts(), \n",
+        "    title=\"Employment styles of SW developers worldwide in 2021\", size=(7,7));"
       ]
     },
     {
