--- a/SO_egypt_freelancing.ipynb
+++ b/SO_egypt_freelancing.ipynb
@@ -46,29 +46,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 56,
       "metadata": {
         "id": "UMMomUt9BI6r"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "UsageError: Line magic function `%` not found.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "% matplotlib inline"
+        "%matplotlib inline"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 57,
       "metadata": {
         "id": "FNZejoEMBT5I"
       },
@@ -92,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 58,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -103,9 +95,104 @@
       "outputs": [],
       "source": [
         "# Drop irrelevant columns\n",
-        "df_2021 = df_2021[['Country', 'DevType', 'MainBranch', 'Employment', 'CompTotal']]\n",
-        "df_2020 = df_2020[['Country', 'DevType', 'MainBranch', 'Employment', 'JobFactors', 'JobSat', 'CompTotal', 'ConvertedComp']]\n",
-        "df_2019 = df_2019[['Country', 'DevType', 'MainBranch', 'Employment', 'JobFactors', 'JobSat', 'CompTotal', 'ConvertedComp', 'Student']]\n",
+        "df_2021 = df_2021[['Country', 'DevType', 'MainBranch', 'Employment']]\n",
+        "df_2020 = df_2020[['Country', 'DevType', 'MainBranch', 'Employment']]\n",
+        "df_2019 = df_2019[['Country', 'DevType', 'MainBranch', 'Employment', 'Student']]\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Checking for missing values"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 59,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Country       0.001485\n",
+              "DevType       0.084921\n",
+              "MainBranch    0.006210\n",
+              "Employment    0.019149\n",
+              "Student       0.021028\n",
+              "dtype: float64"
+            ]
+          },
+          "execution_count": 59,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_2019.isnull().mean(axis=0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 60,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Country       0.006035\n",
+              "DevType       0.234111\n",
+              "MainBranch    0.004638\n",
+              "Employment    0.009417\n",
+              "dtype: float64"
+            ]
+          },
+          "execution_count": 60,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_2020.isnull().mean(axis=0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 61,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Country       0.000000\n",
+              "DevType       0.203202\n",
+              "MainBranch    0.000000\n",
+              "Employment    0.001390\n",
+              "dtype: float64"
+            ]
+          },
+          "execution_count": 61,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_2021.isnull().mean(axis=0)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Our main data fields of interest for this analysis, i.e. \"Employment\" and \"Student\", have a very small percent of missing values, so we can safely ignore them or treat them as a separate category."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 62,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "\n",
         "# replace NA values with a string. No need to use other values in this analysis\n",
         "df_2019.fillna('NA', inplace=True)\n",
@@ -120,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -165,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 64,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -221,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 65,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -259,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 66,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -299,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 67,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -335,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 68,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -343,24 +430,7 @@
         "id": "msS78DYdys1j",
         "outputId": "69ae5b45-720a-4be0-fa72-1b88c64bfb15"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/lib64/python3.10/site-packages/pandas/core/indexing.py:1732: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  self._setitem_single_block(indexer, value, name)\n",
-            "/usr/lib64/python3.10/site-packages/pandas/core/indexing.py:723: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  iloc._setitem_with_indexer(indexer, value, self.name)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "egy_2021.loc[egy_2021['Employment'] == 'Student, full-time', 'Employment'] = 'Student'\n",
         "egy_2021.loc[egy_2021['Employment'] == 'Student, part-time', 'Employment'] = 'Student'"
@@ -368,7 +438,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -406,7 +476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 70,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -434,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 71,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -471,7 +541,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 72,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -521,7 +591,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 73,
       "metadata": {
         "id": "MM62K0OwcA1r"
       },
@@ -533,7 +603,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 74,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -561,7 +631,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 75,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
